// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyFieldLayout render tests should render with provided title and helpTip message 1`] = `
<div
  class="MuiBox-root css-1ofqig9"
  data-testid="item-details"
>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1h8vygf-MuiTypography-root"
      data-testid="item-title-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
      id="field-id"
      tabindex="0"
    >
      foo
    </h6>
    <div
      data-testid="help-tip-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
    >
      baz
    </div>
  </div>
  <div
    aria-labelledby="field-id"
    class="MuiBox-root css-taz3go"
  >
    <div>
      bar
    </div>
  </div>
</div>
`;

exports[`PropertyFieldLayout render tests should render with provided title and no helpTip message 1`] = `
<div
  class="MuiBox-root css-1ofqig9"
  data-testid="item-details"
>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1h8vygf-MuiTypography-root"
      data-testid="item-title-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
      id="field-id"
      tabindex="0"
    >
      foo
    </h6>
  </div>
  <div
    aria-labelledby="field-id"
    class="MuiBox-root css-taz3go"
  >
    <div>
      bar
    </div>
  </div>
</div>
`;
